bugfix: fix some broken styles

--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -36,7 +36,7 @@
       text-align: center;
     }
     &-img__container {
-      width: 60%;
+      width: 75%;
     }
   }
 }
