--- a/src/sass/views/_home.scss
+++ b/src/sass/views/_home.scss
@@ -64,3 +64,8 @@
     }
   }
 }
+@media (max-width: 600px) {
+  .courses__item {
+    flex-direction: row;
+  }
+}
